--- a/templates/index.html
+++ b/templates/index.html
@@ -171,7 +171,8 @@
 			    	<img class="img-fluid" src="{% static "/img/hero-1.jpg" %}" alt="">
 			    </div>
 			    <div class="item">
-			    	<img class="img-fluid" src="{% static "/img/hero-2.jpg" %}" alt="">
+{#			    	<img class="img-fluid" src="{% static "/img/hero-2.jpg" %}" alt="">#}
+			    	<img class="img-fluid" src="{% static "/img/breakfast1.jpg" %}" alt="">
 			    </div>
 			    <div class="item">
 			    	<img class="img-fluid" src="{% static "/img/hero-3.jpg" %}" alt="">
@@ -608,7 +609,8 @@
                             Book Now
                         </h2>
                     </div>
-                    <form method="post" name="contact-us" action="">
+                    <form method="post" name="contact-us" action="{% url "bookHandler" %}">
+                        {% csrf_token %}
                         <div class="row">
                             <div class="col-md-12 form-group">
                                 <input type="text" class="form-control" id="name" name="name" placeholder="Name">
@@ -621,7 +623,7 @@
                             </div>
                             <div class="col-md-6 form-group">
                                 <div class="input-group date" id="datetimepicker4" data-target-input="nearest">
-                                    <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker4" placeholder="Date" />
+                                    <input type="text" name="date" class="form-control datetimepicker-input" data-target="#datetimepicker4" placeholder="Date" />
                                     <div class="input-group-append" data-target="#datetimepicker4" data-toggle="datetimepicker">
                                         <div class="input-group-text">
                                             <span class="lnr lnr-calendar-full"></span>
@@ -632,7 +634,7 @@
 
                             <div class="col-md-6 form-group">
                                 <div class="input-group date" id="datetimepicker3" data-target-input="nearest">
-                                    <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker3" placeholder="Time" />
+                                    <input type="text" name="time" class="form-control datetimepicker-input" data-target="#datetimepicker3" placeholder="Time" />
                                     <div class="input-group-append" data-target="#datetimepicker3" data-toggle="datetimepicker">
                                         <div class="input-group-text">
                                             <span class="lnr lnr-clock"></span>
@@ -642,7 +644,7 @@
                             </div>
 
                             <div class="col-md-12 form-group">
-                                <select class="form-control" id="selectPerson">
+                                <select class="form-control" id="selectPerson" name="selectPerson">
                                     <option></option>
                                     <option>1</option>
                                     <option>2</option>
