邮箱密码找回

--- a/templates/base.html
+++ b/templates/base.html
@@ -176,6 +176,12 @@
         {% block register %}
         {% endblock %}
 
+        {% block action %}
+        {% endblock %}
+
+        {% block passwordget %}
+        {% endblock %}
+
         <footer class="mastfoot pb-5 bg-white section-padding pb-0">
     <div class="inner container">
          <div class="row">
