--- a/templates/login.html
+++ b/templates/login.html
@@ -28,7 +28,7 @@
                 <div class="col-sm-offset-2 col-sm-10">
                   <button type="submit" class="btn btn-default">Sign in</button>
                    <div class="btn btn-default"><a href="{% url "phonelogin" %}">Phone Sign in</a></div>
-                   <div class="btn btn-default"><a href="{% url "forgetpassword" %}">Forget password</a></div>
+                   <div class="btn btn-default"><a href="{% url "passwordfind" %}">Forget password</a></div>
                    <a class="btn btn-default" href="{% url "register" %}">Haven't account? Go to register</a>
                 </div>
                 <div class="col-sm-offset-2 col-sm-10">
